--- a/com.npc/com.npc.desktop/App.config
+++ b/com.npc/com.npc.desktop/App.config
@@ -5,6 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <entityFramework>
+    <!--.LocalDbConnectionFactory-->
+    <!--.SqlConnectionFactory-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
 </configuration>
