--- a/com.npc/com.npc.desktop/com.npc.desktop.csproj
+++ b/com.npc/com.npc.desktop/com.npc.desktop.csproj
@@ -74,6 +74,7 @@
     <Compile Include="entities\CooperativeSessionData.cs" />
     <Compile Include="entities\DataCategory.cs" />
     <Compile Include="entities\DataCategorySessionData.cs" />
+    <Compile Include="entities\DataContent.cs" />
     <Compile Include="entities\DataType.cs" />
     <Compile Include="entities\DataTypeSessionData.cs" />
     <Compile Include="entities\DataValues.cs" />
@@ -103,6 +104,7 @@
     <Compile Include="pro\Mwh.cs" />
     <Compile Include="pro\PSA.cs" />
     <Compile Include="utils\ExcelUtil.cs" />
+    <Compile Include="utils\NumberToLetterUtil.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
