--- a/com.npc/com.npc.desktop/com.npc.desktop.csproj
+++ b/com.npc/com.npc.desktop/com.npc.desktop.csproj
@@ -86,6 +86,12 @@
     <Compile Include="entities\PlantDataSession.cs" />
     <Compile Include="entities\Regions.cs" />
     <Compile Include="entities\RegionSessionData.cs" />
+    <Compile Include="enums\AreaType.cs" />
+    <Compile Include="enums\RegionType.cs" />
+    <Compile Include="enums\RowSequenceType.cs" />
+    <Compile Include="exceptions\CollectionNullException.cs" />
+    <Compile Include="exceptions\RangeInvalidException.cs" />
+    <Compile Include="exceptions\WorksheetNotFoundException.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +107,8 @@
     <Compile Include="interfaces\IReaderSettings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="pro\DDPSupplyContracted.cs" />
+    <Compile Include="pro\DDPSupplyContractedData.cs" />
     <Compile Include="pro\Demand.cs" />
     <Compile Include="pro\Excel.cs" />
     <Compile Include="pro\Kwh.cs" />
